--- a/Maintenance dashboard.Client/Views/EditEmployeeControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditEmployeeControl.xaml
@@ -53,7 +53,7 @@
 
             <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
 
-                <TextBox x:Name="txtID" Width="400"  IsEnabled="False"  materialDesign:HintAssist.Hint="Id" 
+                <TextBox x:Name="txtID" IsEnabled="False"  materialDesign:HintAssist.Hint="Id" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                              Text="{Binding SelectedRegisterTool.Id, 
                              UpdateSourceTrigger=PropertyChanged, 
