--- a/Maintenance dashboard.Client/Views/GetPaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/GetPaddleControl.xaml
@@ -2,11 +2,103 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MaintenanceDashboard.Client.Views"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="650" d:DesignWidth="1200"
+             xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
+             d:DataContext="{d:DesignInstance viewModels:MaintenanceDashboardViewModel}" >
     <Grid>
-            
+        <Border CornerRadius="20" >
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF2281D1"/>
+                    <GradientStop Color="#FF34288B" Offset="1"/>
+                    <GradientStop Color="#FF33288B" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+
+
+
+        <Rectangle Fill="White" Margin="15,85,15, 15" RadiusX="15" RadiusY="15" 
+                       RenderTransformOrigin="0.5,0.5">
+            <Rectangle.Effect>
+                <DropShadowEffect BlurRadius="10" RenderingBias="Quality" Direction="0" Color="#FFBBBBBB" 
+                                      ShadowDepth="1"/>
+            </Rectangle.Effect>
+        </Rectangle>
+
+        <Grid  Margin="15,15,15, 15"  x:Name="gridInfoAddToDataBase" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Text="Dodano do bazy danych" Foreground="Gray" Margin="10" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <materialDesign:PackIcon Grid.Row="1" Kind="DatabaseAdd" VerticalAlignment="Center" Width="100" Height="100" HorizontalAlignment="Center"  Margin="5" Foreground="Gray"/>
+        </Grid>
+        
+        
+
+        <Grid Margin="15,80,15, 15" >
+            <TextBlock Text="PRZYJĘCIE PALETKI" HorizontalAlignment="Center" VerticalAlignment="Top"  
+                           FontSize="18"  Foreground="Gray" Margin="18"/>
+
+            <Grid HorizontalAlignment="Center"  VerticalAlignment="Center">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <ComboBox materialDesign:HintAssist.Hint="Pracownicy" MinWidth="72" Grid.Column="0" Grid.Row="0" 
+                           Margin="10">
+                </ComboBox>
+
+                <TextBox  Width="400" materialDesign:HintAssist.Hint="Numer paletki" Grid.Row="1" Grid.Column="0"
+                             Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
+                             materialDesign:HintAssist.HelperText="Pole musi być wypełnione"
+                              Margin="10"/>
+
+                <TextBox  Width="400" materialDesign:HintAssist.Hint="Data dodania" IsEnabled="False" Grid.Row="2" Grid.Column="0"
+                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                             Text="{Binding Source={x:Static sys:DateTime.Now}, StringFormat='yyyy-MM-dd HH:mm:ss', Mode=OneWay}" Margin="10"/>
+
+                
+                
+
+                <ComboBox materialDesign:HintAssist.Hint="Akcja" MinWidth="72" Grid.Column="0" Grid.Row="3" 
+                          Margin="10">
+                </ComboBox>
+
+                <TextBox  materialDesign:HintAssist.Hint="Data planowanej naprawy" Width="400" Grid.Row="4" Grid.Column="0"
+                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
+
+                <ComboBox materialDesign:HintAssist.Hint="Zamówienie" MinWidth="72" Grid.Column="1" Grid.Row="5" 
+                          Margin="10">
+                </ComboBox>
+
+                <TextBox  Width="400" materialDesign:HintAssist.Hint="Uwagi" Grid.Row="5" Grid.Column="0"
+                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
+
+                <DataGrid ItemsSource="{Binding}" Margin="10" Grid.Column="1" Grid.Row="1" Grid.RowSpan="4"/>
+
+                <Button  x:Name="btnGetPaddle" Height="25"  Background="#FF0069C0" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
+                             BorderBrush="#FF0069C0"  Width="110" Content="POTWIERDŹ" Margin="10" />
+
+            </Grid>
+        </Grid>
+    
     </Grid>
 </UserControl>
