Division of logic into smaller model views and contexts

--- a/Maintenance dashboard.Client/Views/AddEmployeeControl.xaml
+++ b/Maintenance dashboard.Client/Views/AddEmployeeControl.xaml
@@ -6,7 +6,7 @@
              mc:Ignorable="d" 
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             d:DataContext="{d:DesignInstance viewModels:MaintenanceDashboardViewModel}">
+             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}">
     <Grid Width="730">
         <Border CornerRadius="20" >
             <Border.Background>
