--- a/Maintenance dashboard.Client/Views/AddPaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/AddPaddleControl.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="650" d:DesignWidth="1220"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:MaintenanceDashboardViewModel}" >
+             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}" >
     <Grid >
         <Grid>
             <Border CornerRadius="20" >
