--- a/Maintenance dashboard.Client/Views/AddRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/AddRegisterToolControl.xaml
@@ -6,7 +6,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:MaintenanceDashboardViewModel}" >
+             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}" >
     <Grid >
         <Grid>
             <Border CornerRadius="20" >
