--- a/Maintenance dashboard.Client/Views/EditRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditRegisterToolControl.xaml
@@ -7,7 +7,7 @@
              x:Class="MaintenanceDashboard.Client.Views.EditRegisterToolControl"
              mc:Ignorable="d"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:MaintenanceDashboardViewModel}">
+             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}">
     <Grid >
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" 
                                              OpeningEffect="{materialDesign:TransitionEffect FadeIn}"/>
