--- a/Maintenance dashboard.Client/Views/AddPaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/AddPaddleControl.xaml
@@ -66,7 +66,7 @@
 
                     <Button  x:Name="btnAddPaddle" Height="25"  Background="#FF0069C0"  
                              BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
-                             Command="{Binding AddPaddleCommand}" Click="btnAddPaddle_Click"/>
+                             Command="{Binding CreatePaddleCommand}" Click="btnAddPaddle_Click"/>
                     
                 </StackPanel>
             </Grid>
